fix full-width class so it only overrides left/right margin (as otherwise it breaks the spacing between topics)

--- a/quantum-docs/assets/quantum-docs.css
+++ b/quantum-docs/assets/quantum-docs.css
@@ -379,7 +379,8 @@ p:last-child {
 
 .qm-docs-content-section > *:not(.qm-docs-full-width) {
   max-width: 750px;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .qm-docs-top-section-title {
